fix linhight and letter spacing (#119)

--- a/apps/docs/pages/globals.css
+++ b/apps/docs/pages/globals.css
@@ -54,9 +54,10 @@
 body {
   font-family: var(--font-sans);
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.5rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.025em;
 }
 
 @layer utilities {
